--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <!-- Intestazione del sito con Logo-->
+
+    <header>
+
+        <img src="img/Toboolist-logo.jpg" alt="Logo Toboolist">
+
+    
+    </header>
     
 </body>
 </html>
