--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <img src="img/Toboolist-logo.jpg" alt="Logo Toboolist">
 
     </header>
+
+    <main>
+
+        
+    </main>
+
+
     
 </body>
 </html>
