added button section

--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
 
     </header>
 
+    <!-- Corpo del sito -->
     <main>
 
-        
+        <!-- Sezione con pulsanti -->
+
+        <section>
+
+            <button>Add Task</button>
+            <button>Add Section</button>
+       
+        </section>
+
     </main>
 
 
