added list section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
        
         </section>
 
+        <!-- Sezione Liste -->
+
+        <section>
+
+            <h1>&dtrif; New Task</h1>
+            <ul>
+                <div>&check;</div><li>Quarterly Newsletter <span>Editorial</span></li>
+            </ul>
+
+        </section>
+
     </main>
 
 
