--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Intestazione del sito con Logo-->
 
-    <header>
+    <header class="white-background">
 
         <img src="img/Toboolist-logo.jpg" alt="Logo Toboolist">
 
@@ -27,7 +27,7 @@
 
         <!-- Sezione con pulsanti -->
 
-        <section>
+        <section class="white-background">
 
             <button>Add Task</button>
             <button>Add Section</button>
@@ -36,7 +36,7 @@
 
         <!-- Sezione Liste -->
 
-        <section>
+        <section class="white-background">
 
             <h1>&dtrif; New Task</h1>
             <ul>
