added main and sections css style

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <!-- Sezione con pulsanti -->
 
-        <section class="white-background">
+        <section id="button-section" class="white-background">
 
             <button>Add Task</button>
             <button>Add Section</button>
@@ -36,7 +36,7 @@
 
         <!-- Sezione Liste -->
 
-        <section class="white-background">
+        <section id="ul-section" class="white-background">
 
             <h1>&dtrif; New Task</h1>
             <ul>
