replaced tag <button> with <div>

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         <section id="button-section" class="white-background">
 
-            <button>Add Task</button>
-            <button>Add Section</button>
+            <div class="buttom">Add Task</div>
+            <div class="buttom">Add Section</div>
        
         </section>
 
@@ -44,6 +44,8 @@
             </ul>
 
         </section>
+
+
 
     </main>
 
