added css to button section

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         <section id="button-section" class="white-background">
 
-            <div class="buttom">Add Task</div>
-            <div class="buttom">Add Section</div>
+            <div id="selected" class="button">Add Task</div>
+            <div class="button">Add Section</div>
        
         </section>
 
