created basic style of list section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 
         <section id="ul-section" class="white-background">
 
-            <h1>&dtrif; New Task</h1>
+            <h2>&dtrif; New Task</h2>
             <ul>
-                <div>&check;</div><li>Quarterly Newsletter <span>Editorial</span></li>
+                <li><div class="check">&check;</div>
+                    Quarterly Newsletter 
+                    <span class="tag">Editorial</span>
+                </li>
             </ul>
 
         </section>
