added <ul> and <li> margin

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
         <section id="ul-section" class="white-background">
 
+            <!-- Prima Lista -->
+
             <h2>&dtrif; New Task</h2>
             <ul>
                 <li><div class="check">&check;</div>
@@ -45,6 +47,51 @@
                     <span class="tag">Editorial</span>
                 </li>
             </ul>
+
+            <!-- Seconda Lista -->
+
+            <h2>&dtrif; Today</h2>
+            <ul>
+                <li><div class="check">&check;</div>
+                    Recruiting blog post 
+                    <span class="tag">Editorial</span>
+                </li>
+                <li><div class="check">&check;</div>
+                    Mobile app launch 
+                    <span class="tag">Q1 Goals</span>
+                </li>
+                <li><div class="check">&check;</div>
+                    Interview John H. 
+                    <span class="tag">Recruiting</span>
+                </li>
+                <li><div class="check">&check;</div>
+                    Summit update to mobile storefronts 
+                    <span class="tag">Mobile</span>
+                </li>
+            </ul>
+
+            <!-- Terza Lista -->
+
+            <h2>&dtrif; Upcoming</h2>
+            <ul>
+                <li><div class="check">&check;</div>
+                    Schedule meeting with Alex
+                </li>
+                <li><div class="check">&check;</div>
+                    Homepage refresh 
+                    <span class="tag">Website</span>
+                </li>
+                <li><div class="check">&check;</div>
+                    Onboard new Sales team members 
+                    <span class="tag">Sales</span>
+                </li>
+                <li><div class="check">&check;</div>
+                    Review editorial calendar 
+                    <span class="tag">Editorial</span>
+                </li>
+            </ul>
+
+
 
         </section>
 
