added .cross class and background color to .tag class

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ul>
                 <li><div class="check">&check;</div>
                     Quarterly Newsletter 
-                    <span class="tag">Editorial</span>
+                    <span class="tag editorial">Editorial</span>
                 </li>
             </ul>
 
@@ -54,19 +54,19 @@
             <ul>
                 <li><div class="check">&check;</div>
                     Recruiting blog post 
-                    <span class="tag">Editorial</span>
+                    <span class="tag editorial">Editorial</span>
                 </li>
                 <li><div class="check">&check;</div>
                     Mobile app launch 
-                    <span class="tag">Q1 Goals</span>
+                    <span class="tag q1-goals">Q1 Goals</span>
                 </li>
-                <li><div class="check">&check;</div>
+                <li><div class="cross">&cross;</div>
                     Interview John H. 
-                    <span class="tag">Recruiting</span>
+                    <span class="tag recruiting">Recruiting</span>
                 </li>
                 <li><div class="check">&check;</div>
                     Summit update to mobile storefronts 
-                    <span class="tag">Mobile</span>
+                    <span class="tag mobile">Mobile</span>
                 </li>
             </ul>
 
@@ -74,20 +74,20 @@
 
             <h2>&dtrif; Upcoming</h2>
             <ul>
-                <li><div class="check">&check;</div>
+                <li><div class="cross">&cross;</div>
                     Schedule meeting with Alex
                 </li>
                 <li><div class="check">&check;</div>
                     Homepage refresh 
-                    <span class="tag">Website</span>
+                    <span class="tag website">Website</span>
                 </li>
                 <li><div class="check">&check;</div>
                     Onboard new Sales team members 
-                    <span class="tag">Sales</span>
+                    <span class="tag sales">Sales</span>
                 </li>
                 <li><div class="check">&check;</div>
                     Review editorial calendar 
-                    <span class="tag">Editorial</span>
+                    <span class="tag editorial">Editorial</span>
                 </li>
             </ul>
 
